2008-11-17  Beth Dakin  <bdakin@apple.com>

        Reviewed by Adele Peterson.

        Fix for <rdar://problem/6373102> REGRESSION (r36919): In a new mail 
        message, the caret appears in message body by default

        This fixes a regression caused by http://trac.webkit.org/changeset/36919. 
        That change was too sweeping; we do not want to 
        unconditionally set the page to be active, but we can be looser 
        than the original constraints. This patch set the window active if 
        the first responder is or is a descendant of the main frame's frame 
        view.

        * WebView/WebView.mm:
        (-[WebView _updateFocusedAndActiveStateForFrame:]):

2008-11-18  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=22337
        Enable workers by default

        * Configurations/WebKit.xcconfig: Define ENABLE_WORKERS (change from ENABLE_WORKER_THREADS,
        which was accidentally committed before).

2008-11-17  Geoffrey Garen  <ggaren@apple.com>

        Not reviewed.
        
        Try to fix Mac build.

        * WebView/WebScriptDebugDelegate.mm:

2008-11-17  Pierre-Olivier Latour  <pol@apple.com>

        Reviewed by Sam Weinig.

        Added SPI to allow pausing a running CSS transition or animation
        at a given time for testing purposes.

        https://bugs.webkit.org/show_bug.cgi?id=21261

        * WebView/WebFrame.mm:
        (-[WebFrame _pauseAnimation:onNode:atTime:]):
        (-[WebFrame _pauseTransitionOfProperty:onNode:atTime:]):
        * WebView/WebFramePrivate.h:

2008-11-17  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Sam Weinig.

        Updated for JavaScriptCore renames.

        * ForwardingHeaders/runtime/Completion.h: Copied from ForwardingHeaders/runtime/Interpreter.h.
        * ForwardingHeaders/runtime/Interpreter.h: Removed.
        * WebView/WebScriptDebugDelegate.mm:
